Multiple fixes
 - Reworked BanchoBot message fetching.
 - Fix incorrect regex
 - Fix dependency injection related issues
 - Fix concurrent issues.